<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_translate_black_24dp"
            android:title="@string/change_language" />
        <item
            android:id="@+id/settings"
            android:title="Settings"
            android:icon="@drawable/ic_baseline_settings_24"/>

    </group>

    <item android:title="@string/communicate">
        <menu>

            <item
                android:id="@+id/Contact_us"
                android:icon="@drawable/ic_baseline_contact_support"
                android:title="Contact Us"/>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>