<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="22dp"
    android:layout_marginTop="28dp"
    android:layout_marginEnd="22dp"
    android:layout_marginBottom="28dp"
    android:background="@drawable/background"
    tools:context=".PhoneAuth.Select_lang_Activity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="190.1dp"
        android:layout_height="60dp"
        android:layout_marginTop="98dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/sfpro_text_medium"
        android:gravity="center_horizontal"
        android:text="@string/choose_your_language"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:colorControlActivated="@color/viridian"
            android:colorControlNormal="@color/black"
            android:fontFamily="sans-serif"
            android:paddingLeft="6dp"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="false"
            android:colorControlActivated="@color/viridian"
            android:colorControlNormal="@color/black"
            android:fontFamily="@font/sanskrit"
            android:paddingLeft="6dp"
            android:text="@string/marathi"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:colorControlActivated="@color/viridian"
            android:colorControlNormal="@color/black"
            android:fontFamily="@font/sanskrit"
            android:paddingLeft="6dp"
            android:text="@string/hindi"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>


    <Button
        android:id="@+id/button"
        android:layout_width="312dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/gradient"
        android:gravity="center_vertical"
        android:text="Next"
        android:foreground="?android:attr/selectableItemBackground"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="84dp"
        android:fontFamily="@font/sanskrit"
        android:text="अपनी भाषा चुनिए"
        android:textAlignment="center"
        android:textColor="@color/black_two"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>