<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:layout_width="105dp"
                android:layout_height="33dp"
                android:layout_gravity="start"
                android:src="@drawable/logo_low" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/muli_semibold"
                    android:letterSpacing="0.03"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="3dp"
                    android:ellipsize="marquee"
                    tools:text="Kategaon"
                    android:textAlignment="textEnd"
                    android:textColor="#3a3a3a"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/toastImage"
                    android:layout_width="13dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/location" />


            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>


        <!--<com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fitsSystemWindows="true"
            android:background="@color/white"
            app:itemBackground="@drawable/bottom_nav_back_color_selector"
            app:itemIconTint="@drawable/bottom_nav_icon_color_selector"
            app:itemTextColor="@drawable/bottom_nav_icon_color_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_menu" >

             </com.google.android.material.bottomnavigation.BottomNavigationView>
             -->


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.tabs.TabLayout
              android:id="@+id/bottomNavigationView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:tabTextAppearance="@style/MineCustomTabText"
              android:background="@color/white"
              app:tabBackground="@drawable/tab_color_selector"
              app:tabIconTint="@drawable/tab_icon"
              app:tabIndicatorColor="@color/white"
              app:tabSelectedTextColor="@color/white"
              android:tabStripEnabled="false"
              app:tabTextColor="@color/black"
              app:layout_constraintBottom_toBottomOf="parent">

              <com.google.android.material.tabs.TabItem
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:icon="@drawable/tab_home_selector"
                  android:text="@string/home" />

              <com.google.android.material.tabs.TabItem
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:icon="@drawable/tab_mycrops_selector"
                  android:text="@string/my_crops" />

              <com.google.android.material.tabs.TabItem
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:icon="@drawable/tab_mandi_selector"
                  android:text="@string/mandi_view" />

             <com.google.android.material.tabs.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:icon="@drawable/tab_weather_selector"
                 android:text="@string/weather" />

              <com.google.android.material.tabs.TabItem
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:icon="@drawable/tab_news_selector"
                  android:text="@string/news" />
          </com.google.android.material.tabs.TabLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>


     <com.google.android.material.navigation.NavigationView
       android:id="@+id/nav_view"
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:layout_gravity="start"
       app:headerLayout="@layout/nav_header"
       app:menu="@menu/drawer_menu" />







 </androidx.drawerlayout.widget.DrawerLayout>