<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_marginStart="14dp"
    android:layout_marginTop="14dp"
    android:layout_marginEnd="14dp">

    <com.cooltechworks.views.shimmer.ShimmerRecyclerView
        android:id="@+id/shimmer_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerView"
        app:shimmer_demo_angle="20"
        app:shimmer_demo_child_count="8"
        app:shimmer_demo_grid_child_count="1"
        app:shimmer_demo_layout="@layout/demo_crop_card"
        app:shimmer_demo_layout_manager_type="linear_vertical" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:background="@drawable/search_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/search_mandi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/search_box"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:fontFamily="@font/sfpro_text_medium"
            android:gravity="start"
            android:hint="@string/search_crop"
            android:textColor="#909090"
            android:textSize="18sp"
            android:textStyle="normal" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/my_crops"
        android:textColor="#3a3a3a"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


    <com.polyak.iconswitch.IconSwitch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:track="@drawable/switc_background"
        app:isw_active_tint_icon_left="#fff"
        app:isw_active_tint_icon_right="#fff"
        app:isw_background_color="@color/white"
        app:isw_icon_left="@drawable/percentage"
        app:isw_icon_right="@drawable/rupee"
        app:isw_icon_size="14dp"
        app:isw_inactive_tint_icon_left="#000"
        app:isw_inactive_tint_icon_right="#000"
        app:isw_thumb_color_left="#000"
        app:isw_thumb_color_right="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/market_view"
        android:textColor="#3a3a3a"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/switch1"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="@+id/switch1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" >

    </androidx.recyclerview.widget.RecyclerView>

    <!-- <ProgressBar
         android:id="@+id/progressBar5"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/recyclerView" />
         -->
</androidx.constraintlayout.widget.ConstraintLayout>